k8s/30-fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: fastapi-vue-test
spec:
  selector:
    app: fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: fastapi-vue-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: registry.gitlab.com/manusolmel/docker-fastapi-vue/fastapi:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /motos
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /motos
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
